--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -15,13 +15,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Output the name of the event that triggered the workflow
-      - run: |
+        run: |
           echo "Workflow triggered by event: ${{ github.event_name }}"
+      
       - name: Output the name of the branch that the repository is currently referencing
-      - run: |    
+        run: |    
           echo "Name of the branch the repo is referencing: ${{ github.ref }}"
+
+      - uses: actions/checkout@v3.3.0
+      
       - name: List all files in the repository
-      - run: |
+        run: |
           echo "The repo contains following files:"
           tree
     
