--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -9,6 +9,11 @@ on:
   schedule:
     - cron: '15 6 * * 0'
   workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy to'
+        type: environment
+        required: true
 
 jobs:
   build:
@@ -28,4 +33,51 @@ jobs:
         run: |
           echo "The repo contains following files:"
           tree
-    
+  test:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    needs: build
+    environment: Test
+    steps:
+      - name: Testing 
+        run: echo "Testing..."
+  
+  load-test:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    needs: build
+    environment: Load-Test
+    steps:
+      - name: Testing and sleeping
+        run: |
+          echo "Testing..."
+          sleep 15
+
+  production:
+    runs-on: ubuntu-latest
+    if: github.event.inputs.environment == 'Production'
+    needs: [test, load-test]
+    environment: 
+      name: Production
+      url: https://writeabout.net
+    steps:
+      - name: First step
+        run: |
+          echo "Step 1 running..."
+          sleep 10
+      - name: Second step
+        run: |
+          echo "Step 2 running..."
+          sleep 10
+      - name: Third step
+        run: |
+          echo "Step 3 running..."
+          sleep 10
+      - name: Fourth step
+        run: |
+          echo "Step 4 running..."
+          sleep 10
+      - name: Fifth step
+        run: |
+          echo "Step 4 running..."
+          sleep 10    
